# fedai

./: .gitignore  05_metrics.html  05_metrics.md  README.md  cfgs.__init__.html  cfgs.__init__.html.md  cfgs.algos.html  cfgs.algos.html.md  cfgs.data.html  cfgs.data.html.md  cfgs.gpu_servers.html  cfgs.gpu_servers.html.md  cfgs.models.html  cfgs.models.html.md  cfgs.optimizers.html  cfgs.optimizers.html.md  cfgs.partitioners.html  cfgs.partitioners.html.md  client_selector.html  client_selector.html.md  clients.apfl.html  clients.apfl.html.md  clients.base_client.html  clients.base_client.html.md  clients.ditto.html  clients.ditto.html.md  clients.fedala.html  clients.fedala.html.md  clients.fedavg.html  clients.fedavg.html.md  clients.fedavg_ft.html  clients.fedavg_ft.html.md  clients.fedbabu.html  clients.fedbabu.html.md  clients.feddbe.html  clients.feddbe.html.md  clients.fedper.html  clients.fedper.html.md  clients.fedprox.html  clients.fedprox.html.md  (+113 more)
cfgs/cifar_hetro_20/: fedavg.yaml  fedu.yaml  pfedme.yaml  sfmtl.yaml
examples/: example.html  example.md
examples/my_examples/: observer.html  observer.html.md
fedai/: FLdataBlcok.py  FLearner.py  _modidx.py  client_selector.py  clients.py  core.py  data.py  learner_utils.py  losses.py  main.py  metrics.py  models.py  optimizers.py  servers.py  trainers.py  utils.py  wandb_writer.py  wnadb_writer.py
fedai/cfgs/: __init__.py  algos.py  data.py  gpu_servers.py  models.py  optimizers.py  partitioners.py
fedai/clients/: apfl.py  base_client.py  ditto.py  fedala.py  fedas.py  fedavg.py  fedavg_ft.py  fedbabu.py  fedcac.py  feddbe.py  fedpac.py  fedper.py  fedprox.py  (+10 more)
jobs/: all_test.sh  arrayjob_test.sh  cifar_arrayjob.sh  cifar_arrayjob_test.sh  cinc10_arrayjob.sh  create_container.sh  fashionmnist_arrayjob_test copy.sh  feddbe_hyperparams.sh  hyperparams.sh  ifca_hyperparams copy.sh  run_mgr.sh  single.sh  test.sh
nbs/: 00_core.ipynb  01_servers.ipynb  01a_clients.BaseClient.ipynb  01a_data.vision.partitioners.ipynb  01b_clients.Fedu.ipynb  01b_data.vision.VisionBlock.ipynb  01c_clients.pFedMe.ipynb  01c_data.vision.ipynb  01d_clients.perFedAvg.ipynb  01d_data.ipynb  01e_clients.sfmtl.ipynb  01e_data.ipynb  01f_clients.MIRA.ipynb  01g_clients.FedSophia.ipynb  02_clients.ipynb  02_federated.agents.ipynb  02_servers.ipynb  02a_models.generics.ipynb  02b_models.vision.lenets.ipynb  02c_models.vision.resnets.ipynb  02d_models.vision.mobilenet.ipynb  02e_models.vision.efficentnet.ipynb  02f_models.vision.vits.ipynb  02g_models.vision.registery.ipynb  02h_models.vision.ipynb  02i_models.ipynb  02k_models.ipynb  03_losses.ipynb  03_trainers.ipynb.ipynb  04_data.core.ipynb  04_data.downloader.ipynb  04_data.ipynb.ipynb  04_data.partitioners.ipynb  04_data.tensorf.ipynb  04_optimizers.ipynb  04_text.data.ipynb  04_vision.VisionBlock.ipynb  04_vision.data.ipynb  04_vision.downloader.ipynb  04a_optimizers.custom_optimizers.ipynb  (+103 more)
(+106 files in other folders)
