[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fedai"
dynamic = ["version"]
description = "A minimalist Library for doing Federated learning research."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Ahmed-Khaled-Saleh", email = "ahmedkhaledsaleh11@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    'fastcore>=1.12.24',
    'nbdev>=3.0.12',
    'notebook>=7.5.5',
    'jupyterlab>=4.5.6',
    'pandas>=3.0.1',
    'torch',
    'scikit-learn>=1.8.0',
    'torchvision',
    'networkx>=3.6.1',
    'python-louvain>=0.16',
    'loguru>=0.7.3',
    'python-dotenv>=1.2.2',
    'einops>=0.8.2',
    'tqdm',
    'peft>=0.18.1',
    'transformers>=5.0.0',
    'datasets>=3.1.0',
    'omegaconf>=2.3.0',
    'h5py>=3.13.0',
    'hydra-core>=1.3.2',
    'hydra-submitit-launcher>=1.2.0',
    'ujson>=5.12.0',
    'gdown>=5.2.0',
    'timm>=1.0.25',
    'wandb>=0.25.0',
    'flwr-datasets[vision]>=0.5.0',
]
[project.urls]
Repository = "https://github.com/Ahmed-Khaled-Saleh/fedai"
Documentation = "https://Ahmed-Khaled-Saleh.github.io/fedai"

[project.entry-points.nbdev]
fedai = "fedai._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fedai.__version__"}

[tool.setuptools.packages.find]
include = ["fedai*"]

[tool.nbdev]
